--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <div class="container">
   <h1>Welcome!</h1>
   <nav>
-    <a href="link1.html">Link One</a>
-    <a href="link2.html">Link Two</a>
+    <a href="/1997/index.html">1997</a>
+    <a href="/aistock/index..html">aistock</a>
   </nav>
 </div>
 </body>
