--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Simple Page</title>
+<title>Ali3ngr2</title>
 <style>
   html, body {
     height: 100%;
