--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <h1>Welcome!</h1>
   <nav>
     <a href="/1997/index.html">1997</a>
-    <a href="/aistock/index..html">aistock</a>
+    <a href="/aistock/">aistock</a>
   </nav>
 </div>
 </body>
