--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 </style>
 </head>
 <body>
+  <a rel="me" href="https://mastodon.social/@groy">Mastodon</a>
 <div class="container">
   <h1>Welcome!</h1>
   <nav>
