--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </nav>
 
 </div>
-      <a rel="me" href="https://mastodon.social/@groy">Mastodon</a>
+      <a rel="me" href="https://mastodon.social/@groy"> </a>
 
 </body>
 </html>
