--- a/aistock/index.html
+++ b/aistock/index.html
@@ -83,12 +83,12 @@
         <div class="wrapper">
             <div class="logo-placeholder"><img src="img/logo.svg"></div>
             <nav>
-                <a href="#">Video</a> |
-                <a href="#">Photos</a> |
-                <a href="#">Illustration</a> |
-                <a href="#">Free!</a> |
-                <a href="#">Resources</a> |
-                <a href="#">Login</a>
+                <a href="https://chat.openai.com/g/g-f9sgJiw05-aistock">Video</a> |
+                <a href="https://chat.openai.com/g/g-f9sgJiw05-aistock">Photos</a> |
+                <a href="https://chat.openai.com/g/g-f9sgJiw05-aistock">Illustration</a> |
+                <a href="https://chat.openai.com/g/g-f9sgJiw05-aistock">Free!</a> |
+                <a href="https://chat.openai.com/g/g-f9sgJiw05-aistock">Resources</a> |
+                <a href="https://chat.openai.com/g/g-f9sgJiw05-aistock">Login</a>
             </nav>
         </div>
     </header>
@@ -101,18 +101,18 @@
         </div>
         <div class="text-section">
             <h1>Incredible stock photos for your company. Free and inclusive!</h1>
-            <p>Do you dabble in ai photography? <a href="#">Send us</a> your stock photos to be featured!.</p>
+            <p>Do you dabble in ai photography? <a href="mailto:hey@grimpixels.com">Send us</a> your stock photos to be featured!.</p>
         </div>
     </div>
     <footer>
         <h3>Create your best work, with the best stock photos on the internet today. Start today. Do it.</h3>
         <nav>
-            <a href="#">Video</a> |
-            <a href="#">Photos</a> |
-            <a href="#">Illustration</a> |
-            <a href="#">Free!</a> |
-            <a href="#">Resources</a> |
-            <a href="#">Login</a>
+            <a href="https://chat.openai.com/g/g-f9sgJiw05-aistock">Video</a> |
+            <a href="https://chat.openai.com/g/g-f9sgJiw05-aistock">Photos</a> |
+            <a href="https://chat.openai.com/g/g-f9sgJiw05-aistock">Illustration</a> |
+            <a href="https://chat.openai.com/g/g-f9sgJiw05-aistock">Free!</a> |
+            <a href="https://chat.openai.com/g/g-f9sgJiw05-aistock">Resources</a> |
+            <a href="https://chat.openai.com/g/g-f9sgJiw05-aistock">Login</a>
         </nav>
         <p>&copy; aistock. All Rights Reserved.</p>
     </footer>
