--- a/comic/fff.html
+++ b/comic/fff.html
@@ -21,7 +21,7 @@
    <main>
     <section id="comic-grid">
         <!-- Replace with your comic images -->
-        <a href="Chapter1.html"><img src="img/ch1.png" alt="Chapter 1"></a>
+        <a href="chapter1.html"><img src="img/ch1.png" alt="Chapter 1"></a>
         <a href="chapter2.html"><img src="img/ch2.png" alt="Chapter 2"></a>
         <a href="chapter3.html"><img src="chapter3-thumbnail.jpg" alt="Chapter 3"></a>
         <a href="chapter4.html"><img src="chapter4-thumbnail.jpg" alt="Chapter 4"></a>
