--- a/comic/fff.html
+++ b/comic/fff.html
@@ -33,7 +33,7 @@
 </main>
 
     <footer>
-        <p>&copy; 2024 Grimpixels.</p>
+        <p>&copy; 2024 Grimpixels</p>
     </footer>
 </body>
 </html>
