--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="profile-image"></div>
         <div class="title">_GRoY_</div>
         <div class="link-container">
-            <a href="https://grimpixels.com/food-fame_fury/" class="link-button"></i> Food, Fame & Fury!!!</a>
+            <a href="https://grimpixels.com/food-fame_fury/" class="link-button"></i> Food, Fame & Fury</a>
 
              <a href="https://ghislainroy.com" class="link-button"></i> Graphic Design Portfolio</a>
              <a href="https://ali3ngr2.github.io/aistock/" class="link-button"></i> AIstock</a>
