modified:   index.html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
 
              <a href="https://ghislainroy.com" class="link-button"></i> Graphic Design Portfolio</a>
              <a href="https://ali3ngr2.github.io/aistock/" class="link-button"></i> AIstock</a>
-            <!-- Add more links as needed -->
+             <a href="https://ali3ngr2.github.io/1997/" class="link-button"></i> .</a>
+         
+             <!-- Add more links as needed -->
+            
         </div>
     </div>
 </body>
