modified:   index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             font-family: Montserrat, sans-serif;
         }
         body {
-            background: linear-gradient(135deg, #093028 0%, #237A57 99%, #fad0c4 100%);
+            background: linear-gradient(135deg, #093028 0%, #237A57 100%);
             display: flex;
             justify-content: center;
             align-items: center;
