--- a/grimpixels/fff.html
+++ b/grimpixels/fff.html
@@ -23,12 +23,10 @@
         <!-- Replace with your comic images -->
         <a href="chapter1.html"><img src="img/ch1.png" alt="Chapter 1"></a>
         <a href="chapter2.html"><img src="img/ch2.png" alt="Chapter 2"></a>
-        <a href="chapter3.html"><img src="chapter3-thumbnail.jpg" alt="Chapter 3"></a>
-        <a href="chapter4.html"><img src="chapter4-thumbnail.jpg" alt="Chapter 4"></a>
-        <!-- Add more chapters as needed -->
-        <!-- Example additional thumbnails -->
+        <a href="chapter3.html"><img src="img/ch3.png" alt="Chapter 3"></a>
+        <!-- <a href="chapter4.html"><img src="chapter4-thumbnail.jpg" alt="Chapter 4"></a>
         <a href="chapter5.html"><img src="chapter5-thumbnail.jpg" alt="Chapter 5"></a>
-        <a href="chapter6.html"><img src="chapter6-thumbnail.jpg" alt="Chapter 6"></a>
+        <a href="chapter6.html"><img src="chapter6-thumbnail.jpg" alt="Chapter 6"></a> -->
     </section>
 </main>
 
