--- a/grimpixels/fff.html
+++ b/grimpixels/fff.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="img/logo.png" alt="Logo" id="logo">
+       <a href="index.html"> <img src="img/logo.png" alt="Logo" id="logo"></a>
         <h1>GRIMPIXELS</h1>
         <nav>
             <ul>
