--- a/grimpixels/subscribe.html
+++ b/grimpixels/subscribe.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <img src="img/logo.png" alt="Logo" id="logo">
-        <h1>GRIMPIXELS</h1>
+        <a href="index.html"> <img src="img/logo.png" alt="Logo" id="logo">
+            <h1>GRIMPIXELS</h1></a>
         <nav>
             <ul>
                 <li><a href="fff.html">Food, Fame & Fury</a></li>
