--- a/grimpixels/subscribe.html
+++ b/grimpixels/subscribe.html
@@ -25,7 +25,7 @@
             <form action="/subscribe" method="post">
                 <input type="email" id="email" name="email" placeholder="Your email address" required>
                 <button type="submit">Subscribe</button>
-                <p>You can also follow me on <a href="http://www.instagram.com/_groy_">Instagram, webtoon & Inkverse.</a></p>
+                <p>You can also follow me on <a href="http://www.instagram.com/_groy_">Instagram,</a> webtoon & Inkverse.</p>
             </form>
         </section>
     </main>
