--- a/grimpixels/subscribe.html
+++ b/grimpixels/subscribe.html
@@ -19,18 +19,16 @@
         </nav>
     </header>
     <main>
-        <section class="subscribe-section">
-            <h2>Subscribe</h2>
-            <p>To receive updates in your inbox, subscribe by email here:</p>
-            <form action="/subscribe" method="post">
-                <input type="email" id="email" name="email" placeholder="Your email address" required>
-                <button type="submit">Subscribe</button>
-                <p>You can also follow me on <a href="http://www.instagram.com/_groy_">Instagram,</a> webtoon & Inkverse.</p>
-            </form>
-        </section>
+
+
+
+     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdu1-uNGdEmPBaYV32Y5li0RPreU3_Xf_A2k26L8IucQASp0Q/viewform?embedded=true" width="640" height="586" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
+     <p>You can also follow me on <a href="http://www.instagram.com/_groy_">Instagram,</a> <a href="https://www.webtoons.com/en/canvas/food-fame-fury/list?title_no=923080">webtoon</a> & <a href="https://inkverse.co/comics/food-fame-fury">Inkverse.</a></p>
+
     </main>
     <footer>
-        <p>&copy; 2024 Grimpixels.</p>
+        <p>&copy; 2024 Grimpixels</p>
     </footer>
 </body>
 </html>
