--- a/grimpixels/subscribe.html
+++ b/grimpixels/subscribe.html
@@ -28,7 +28,7 @@
 
     </main>
     <footer>
-        <p>&copy; 2024 Grimpixels</p>
+        <p>2024 Grimpixels</p>
     </footer>
 </body>
 </html>
