--- a/grimpixels/subscribe.html
+++ b/grimpixels/subscribe.html
@@ -28,7 +28,7 @@
 I also have a gumroad page where you can purchase <a href="https://groy82.gumroad.com/subscribe">comics and other digital assets.</a>
     </main>
     <footer>
-        <p>2024 Grimpixels</p>
+        <p>2024 Grimpixels.</p>
     </footer>
 </body>
 </html>
