--- a/grimpixels/subscribe.html
+++ b/grimpixels/subscribe.html
@@ -25,7 +25,7 @@
      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdu1-uNGdEmPBaYV32Y5li0RPreU3_Xf_A2k26L8IucQASp0Q/viewform?embedded=true" width="640" height="586" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
      <p>You can also follow me on <a href="http://www.instagram.com/_groy_">Instagram,</a> <a href="https://www.webtoons.com/en/canvas/food-fame-fury/list?title_no=923080">webtoon</a> & <a href="https://inkverse.co/comics/food-fame-fury">Inkverse.</a></p>
-I also have a gumroad page where you can purchase <a href="https://groy82.gumroad.com/subscribe">comics and other digital assets.</a>
+I also have a gumroad page where you can purchase <a href="https://groy82.gumroad.com/">comics and other digital assets.</a>
     </main>
     <footer>
         <p>2024 Grimpixels</p>
