--- a/grimpixels/index.html
+++ b/grimpixels/index.html
@@ -10,13 +10,19 @@
     <header>
         <a href="index.html"> <img src="img/logo.png" alt="Logo" id="logo">
                 <h1>GRIMPIXELS</h1></a>
-        <nav>
-            <ul>
-                <li><a href="fff.html">Food, Fame & Fury</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="subscribe.html">Subscribe</a></li>
-            </ul>
-        </nav>
+                <nav>
+                    <ul>
+                        <li class="dropdown">
+                            <a href="javascript:void(0)">Comics</a>
+                            <ul class="dropdown-content">
+                                <li><a href="fff.html">Food, Fame & Fury</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="subscribe.html">Subscribe</a></li>
+                    </ul>
+                </nav>
+                
     </header>
     <main>
         <section id="comic-home">
