--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
                 <h1>GRIMPIXELS</h1></a>
                 <nav>
                     <ul>
-                        <li><a href="fff.html">test</a></li>
-                        <li><a href="about.html">test</a></li>
-                        <li><a href="subscribe.html">test</a></li>
+                        <li><a href="fff.html">Food, Fame & Fury</a></li>
+                        <li><a href="about.html">About</a></li>
+                        <li><a href="subscribe.html">Subscribe</a></li>
                     </ul>
                 </nav>
     </header>
