--- a/links/index.html
+++ b/links/index.html
@@ -62,7 +62,7 @@
         <div class="profile-image"></div>
         <div class="title">_GRoY_</div>
         <div class="link-container">
-            <a href="https://grimpixels.com/food-fame_fury/" class="link-button"> Food, Fame & Fury</a>
+            <a href="https://grimpixels.com/fff.html" class="link-button"> Food, Fame & Fury</a>
 
              <a href="https://ghislainroy.com" class="link-button"> Graphic Design Portfolio</a>
              <a href="https://ali3ngr2.github.io/aistock/" class="link-button"> AIstock</a>
