--- a/links/index.html
+++ b/links/index.html
@@ -65,13 +65,13 @@
             <a href="https://grimpixels.com/fff.html" class="link-button"> Food, Fame & Fury</a>
 
              <a href="https://ghislainroy.com" class="link-button"> Graphic Design Portfolio</a>
-             <a href="https://ali3ngr2.github.io/aistock/" class="link-button"> AIstock</a>
+             <a href="https://grimpixels.com/aistock/" class="link-button"> AIstock</a>
              <a href="https://groy82.gumroad.com/" class="link-button"> Store</a>        
          
              <!-- Add more links as needed -->
             
         </div>
-       <br><br><br> <a href="https://ali3ngr2.github.io/1997/" color="#237A57"> . </a>
+       <br><br><br> <a href="https://grimpixels.com/1997/" color="#237A57"> . </a>
     </div>
 </body>
 </html>
