--- a/404.html
+++ b/404.html
@@ -13,7 +13,8 @@
     </header>
 
     </main>
-    <p>Poop. You're lost. Go <a href="index.html">back home</a>you dumdum.</p>
+    <p>Poop. You're lost. Go <a href="index.html">back home</a> you dumdum.</p>
+    <img src="img/lost.png" width="600px" height=auto>
     <script data-goatcounter="https://ali3ngr2.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
     <footer>
