--- a/404.html
+++ b/404.html
@@ -13,6 +13,7 @@
     </header>
 
     </main>
+    <h1>ERR0Я!</h1>
     <p>Poop. You're lost. Go <a href="index.html">back home</a> you dumdum.</p>
     <img src="img/lost.png" width="600px" height=auto>
     <script data-goatcounter="https://ali3ngr2.goatcounter.com/count"
