--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ERROR</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="http://grimpixels.com/style.css">
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
     </main>
     <h1>ERR0Я!</h1>
     <p>Poop. You're lost. Go <a href="index.html">back home</a> you dumdum.</p>
-    <img src="img/lost.png" width="600px" height=auto>
+    <img src="http://grimpixels.com/img/lost.png" width="600px" height=auto>
     <script data-goatcounter="https://ali3ngr2.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
     <footer>
