--- a/404.html
+++ b/404.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ERROR</title>
-    <link rel="stylesheet" href="http://grimpixels.com/style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <header>
-        <a href="index.html"> <img src="http://grimpixels.com/img/logo.png" alt="Logo" id="logo">
+        <a href="index.html"> <img src="/img/logo.png" alt="Logo" id="logo">
                 <h1>˥ƎXᴉԀWᴉЯ⅁</h1></a>
     </header>
 
     </main>
     <h1>ERR0Я!</h1>
     <p>Poop. You're lost. Go <a href="index.html">back home</a> you dumdum.</p>
-    <img src="http://grimpixels.com/img/lost.png" width="60%" height=auto>
+    <img src="/img/lost.png" width="60%" height=auto>
     <script data-goatcounter="https://ali3ngr2.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
     <footer>
