--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
 
     </main>
     <h1>ERR0Я!</h1>
-    <p>Poop. You're lost. Go <a href="index.html">back home</a> you dumdum.</p>
+    <p>Poop. You're lost. Go <a href="/index.html">back home</a> you dumdum.</p>
     <img src="/img/lost.png" width="60%" height=auto>
     <script data-goatcounter="https://ali3ngr2.goatcounter.com/count"
         async src="//gc.zgo.at/count.js"></script>
