--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <a href="index.html"> <img src="/img/logo.png" alt="Logo" id="logo">
-                <h1>˥ƎXᴉԀWᴉЯ⅁</h1></a>
+                <h1>$˥ƎXᴉԀWᴉЯ⅁</h1></a>
     </header>
 
     </main>
