--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
             <h2>About</h2>
             <p>Grimpixels.com is a work in progress. For now, it's the place where I will be publishing my comic Food, Fame & Fury.</p><br>
 
-            <p>Food, Fame & Fury is a dark comedy about isolation, fame, mental health and gun violence in the digital age. The story draws inspiration from Taxi Driver to comment on the influence of digital media on individuals and society. Tarvus, a lonely food delivery man, spirals into obsession with webcam model Breezy. Struggling to find help for his declining mental state, he turns to the internet, leading him down an even darker path.</p>
+            <p>Food, Fame & Fury is a satirical dark comedy about a lonely food delivery man who spirals into obsession with a webcam model. Struggling to find help for his declining mental state, he turns to the internet, leading him down an even darker path.</p>
           
         </section>
     </main>
