--- a/fff.html
+++ b/fff.html
@@ -29,7 +29,8 @@
         <a href="chapter6.html"><img src="chapter6-thumbnail.jpg" alt="Chapter 6"></a> -->
     </section>
 </main>
-
+<script data-goatcounter="https://ali3ngr2.goatcounter.com/count"
+async src="//gc.zgo.at/count.js"></script>
     <footer>
         <p>&copy; 2024 Grimpixels</p>
     </footer>
