--- a/subscribe.html
+++ b/subscribe.html
@@ -27,6 +27,8 @@
      <p>You can also follow me on <a href="http://www.instagram.com/_groy_">Instagram,</a> <a href="https://www.webtoons.com/en/canvas/food-fame-fury/list?title_no=923080">webtoon</a> & <a href="https://inkverse.co/comics/food-fame-fury">Inkverse.</a></p>
 I also have a little store where you can purchase <a href="https://groy82.gumroad.com">comics and other digital assets.</a>
     </main>
+    <script data-goatcounter="https://ali3ngr2.goatcounter.com/count"
+async src="//gc.zgo.at/count.js"></script>
     <footer>
         <p>2024 Grimpixels</p>
     </footer>
