--- a/sketches/index.html
+++ b/sketches/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"> <img src="http://grimpixels.com/img/logo.png" alt="Logo" id="logo">
+        <a href="https://grimpixels.com"> <img src="http://grimpixels.com/img/logo.png" alt="Logo" id="logo">
                 <h1>GRIMPIXELS</h1></a>
         <nav>
             <ul>
