--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <main>
         <section class="content-section">
             <h2>About</h2>
-            <p>Grimpixels.com is a work in progress. For now, it's the place where I will be publishing my comic Food, Fame & Fury.</p><br>
+            <p>Grimpixels.com is a work in progress. I needed a domain name to publish random personal projects and I thought it was a catchy name. Then I made this little logo thing, it's like a moth mixed with the pen tool used in graphic design and digital art. Clever eh? Don't try to find any meaning behind it, I just thought it was a cool little symbol. For now, this is the place where I will be publishing my comic Food, Fame & Fury.</p><br>
 
             <p>Food, Fame & Fury is a satirical dark comedy about a lonely food delivery man who spirals into obsession with a webcam model. Struggling to find help for his declining mental state, he turns to the internet, leading him down an even darker path.</p>
           
