--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <h1>GRIMPIXELS</h1></a>
                 <nav>
                     <ul>
-                        <li><a href="fff.html">Food, Fame & Fury!!</a></li>
+                        <li><a href="fff.html">Food, Fame & Fury</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="subscribe.html">Subscribe</a></li> 
                     </ul>
