--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="index.html"> <img src="img/logo.png" alt="Logo" id="logo">
-                <h1>GRIMPIXELSz</h1></a>
+                <h1>GRIMPIXELS</h1></a>
                 <nav>
                     <ul>
                         <li><a href="fff.html">Food, Fame & Fury</a></li>
