--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grimpixelzs</title>
+    <title>Grimpixels</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <a href="index.html"> <img src="img/logo.png" alt="Logo" id="logo">
-                <h1>GRIMPIXELSz</h1></a>
+                <h1>GRIMPIXELS</h1></a>
                 <nav>
                     <ul>
                         <li><a href="fff.html">Food, Fame & Fury</a></li>
