--- a/fff.html
+++ b/fff.html
@@ -25,8 +25,8 @@
         <a href="chapter2.html"><img src="img/ch2.png" alt="Chapter 2"></a>
         <a href="chapter3.html"><img src="img/ch3.png" alt="Chapter 3"></a>
         <a href="chapter4.html"><img src="img/ch4.png" alt="Chapter 4"></a>
-        <!-- <a href="chapter5.html"><img src="chapter5-thumbnail.jpg" alt="Chapter 5"></a>
-        <a href="chapter6.html"><img src="chapter6-thumbnail.jpg" alt="Chapter 6"></a> -->
+        <a href="chapter5.html"><img src="img/ch5.png" alt="Chapter 5"></a>
+
     </section>
 </main>
 <script data-goatcounter="https://ali3ngr2.goatcounter.com/count"
