--- a/sketches/index.html
+++ b/sketches/index.html
@@ -21,33 +21,34 @@
     <main>
         <section id="comic-chapter">
             <!-- Replace with your comic page images -->
-            <img src="01_Page_1.jpg" >
-            <img src="01_Page_2.jpg" >
-            <img src="01_Page_3.jpg" >
-            <img src="01_Page_4.jpg" >
-            <img src="01_Page_5.jpg" >
-            <img src="01_Page_6.jpg" >
-            <img src="01_Page_7.jpg" >
-            <img src="02_Page_8.jpg" >
-            <img src="02_Page_9.jpg" >
-            <img src="02_Page_10.jpg" >
-            <img src="02_Page_11.jpg" >
-            <img src="03_Page_12.jpg" >
-            <img src="03_Page_13.jpg" >
-            <img src="03_Page_14.jpg" >
-            <img src="03_Page_15.jpg" >
-            <img src="03_Page_16.jpg" >
-            <img src="03_Page_17.jpg" >
-            <img src="04_Page_18.jpg" >
-            <img src="04_Page_19.jpg" >
-            <img src="04_Page_20.jpg" >
-            <img src="04_Page_21.jpg" >
-            <img src="05_Page_22.jpg" >
-            <img src="05_Page_23.jpg" >
-            <img src="05_Page_24.jpg" >
-            <img src="05_Page_25.jpg" >
-            <img src="05_Page_26.jpg" >
-            <img src="06_Page_27.jpg" >
+            <img src="Page_01.jpg" >
+            <img src="Page_02.jpg" >
+            <img src="Page_03.jpg" >
+            <img src="Page_04.jpg" >
+            <img src="Page_05.jpg" >
+            <img src="Page_06.jpg" >
+            <img src="Page_07.jpg" >
+            <img src="Page_08.jpg" >
+            <img src="Page_09.jpg" >
+            <img src="Page_10.jpg" >
+            <img src="Page_11.jpg" >
+            <img src="Page_12.jpg" >
+            <img src="Page_13.jpg" >
+            <img src="Page_14.jpg" >
+            <img src="Page_15.jpg" >
+            <img src="Page_16.jpg" >
+            <img src="Page_17.jpg" >
+            <img src="Page_18.jpg" >
+            <img src="Page_19.jpg" >
+            <img src="Page_20.jpg" >
+            <img src="Page_21.jpg" >
+            <img src="Page_22.jpg" >
+            <img src="Page_23.jpg" >
+            <img src="Page_24.jpg" >
+            <img src="Page_25.jpg" >
+            <img src="Page_26.jpg" >
+
+            <img src="06_Page_27.jpg" >  
             <img src="06_Page_28.jpg" >
             <img src="06_Page_29.jpg" >
             <img src="06_Page_30.jpg" >
