--- a/sketches/index.html
+++ b/sketches/index.html
@@ -47,7 +47,11 @@
             <img src="Page_24.jpg" >
             <img src="Page_25.jpg" >
             <img src="Page_26.jpg" >
-
+            <img src="Page_26.jpg" >
+            <img src="Page_27.jpg" >
+            <img src="Page_28.jpg" >
+            <img src="Page_29.jpg" >
+            <img src="Page_30.jpg" >
             <img src="06_Page_27.jpg" >  
             <img src="06_Page_28.jpg" >
             <img src="06_Page_29.jpg" >
