--- a/sketches/index.html
+++ b/sketches/index.html
@@ -21,7 +21,7 @@
     <main>
         <section id="comic-chapter">
             <!-- Replace with your comic page images -->
-            <img src="Page_01.png" >
+            <img src="Page_01.jpg" >
             <img src="Page_02.jpg" >
             <img src="Page_03.jpg" >
             <img src="Page_04.jpg" >
