--- a/sketches/index.html
+++ b/sketches/index.html
@@ -52,7 +52,7 @@
             <img src="Page_29.jpg" >
             <img src="Page_30.jpg" >
             <img src="Page_31.jpg" >  
-            <img src="06_Page_28.jpg" >
+            <img src="Page_32.jpg" >
             <img src="06_Page_29.jpg" >
             <img src="06_Page_30.jpg" >
             <img src="07_Page_31.jpg" >
