--- a/sketches/index.html
+++ b/sketches/index.html
@@ -53,7 +53,7 @@
             <img src="Page_30.jpg" >
             <img src="Page_31.jpg" >  
             <img src="Page_32.jpg" >
-            <img src="06_Page_29.jpg" >
+            <img src="Page_33.jpg" >
             <img src="06_Page_30.jpg" >
             <img src="07_Page_31.jpg" >
             <img src="07_Page_32.jpg" >
