--- a/sketches/index.html
+++ b/sketches/index.html
@@ -46,6 +46,7 @@
             <img src="Page_23.jpg" >
             <img src="Page_24.jpg" >
             <img src="Page_25.jpg" >
+            <img src="Page_25b.jpg" >
             <img src="Page_26.jpg" >
             <img src="Page_27.jpg" >
             <img src="Page_28.jpg" >
