--- a/links/index.html
+++ b/links/index.html
@@ -72,6 +72,7 @@
             
         </div>
        <br><br><br> <a href="https://grimpixels.com/1997/" color="#237A57"> . </a>
+       <a rel="me" href="https://mastodon.social/@groy">Mastodon</a>
     </div>
 </body>
 </html>
