--- a/links/index.html
+++ b/links/index.html
@@ -72,8 +72,8 @@
             
         </div>
        <br><br><br> <a href="https://grimpixels.com/1997/" color="#237A57"> . </a>
-       <a rel="me" href="https://mastodon.social/@groy"></a>
-       <a rel="me" href="https://web.brid.gy/r/https://grimpixels.com/""></div>a>
+       <a rel="me" href="https://mastodon.social/@groy">.</a>
+    </div>
     </div>
 </body>
 </html>
