--- a/fff.html
+++ b/fff.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grimpixels</title>
+    <title>Grimpixels - Food, Fame & Fury</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
