--- a/links/index.html
+++ b/links/index.html
@@ -66,7 +66,8 @@
 
              <a href="https://ghislainroy.com" class="link-button"> Graphic Design Portfolio</a>
              <a href="https://grimpixels.com/aistock/" class="link-button"> AIstock</a>
-             <a href="https://groy82.gumroad.com/" class="link-button"> Store</a>        
+             <a href="https://grimpixels.com/illustrations/" class="link-button"> Illustrations</a>        
+             <a href="https://bsky.app/profile/grimpixels.com" class="link-button"> Bluesky</a>    
          
              <!-- Add more links as needed -->
             
