--- a/subscribe.html
+++ b/subscribe.html
@@ -24,7 +24,9 @@
 
      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdu1-uNGdEmPBaYV32Y5li0RPreU3_Xf_A2k26L8IucQASp0Q/viewform?embedded=true" width="640" height="480" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
-     <p>You can also follow me on <a href="http://www.instagram.com/_groy_">Instagram,</a> & <a href="https://inkverse.co/comics/food-fame-fury">Inkverse.</a></p>
+
+
+     <p>You can also follow me on <a href="http://www.instagram.com/_groy_">Instagram,</a> & <a href="https://inkverse.co/comics/food-fame-fury">Inkverse, or <a href="https://grimpixels.com/rss.xml" target="_blank">subsribe to my RSS feed.</a></p>
 
     </main>
     <script data-goatcounter="https://ali3ngr2.goatcounter.com/count"
