--- a/subscribe.html
+++ b/subscribe.html
@@ -26,7 +26,7 @@
 
 
 
-     <p>You can also follow me on <a href="http://www.instagram.com/_groy_">Instagram,</a> & <a href="https://inkverse.co/comics/food-fame-fury">Inkverse, or <a href="https://grimpixels.com/rss.xml" target="_blank">subsribe to my RSS feed.</a></p>
+     <p>You can also follow me on <a href="http://www.instagram.com/_groy_">Instagram,</a> & <a href="https://inkverse.co/comics/food-fame-fury">Inkverse</a>, or <a href="https://grimpixels.com/rss.xml" target="_blank">subsribe to my RSS feed.</a></p>
 
     </main>
     <script data-goatcounter="https://ali3ngr2.goatcounter.com/count"
