--- a/rss.html
+++ b/rss.html
@@ -27,7 +27,7 @@
 
             <p>I remember back in the day I would use a reader to subscribe to blogs, news sites, comics etc. It was great because you could customize your own reader, which would update chronologically without any algorithms or comments or anything... You would only see what you wanted to see in the order that it came out. Then social media came and changed the way people view their content, and we all know how great that turned out.</p><br>
 
-            <p>So if you're old school like me or want to get into it, you need to first find a <a href="https://bloggingwizard.com/free-rss-feed-readers/">reader</a> (I use <a href="https://www.freshrss.org/">freshRSS</a>) and add <a href="rss.xml">this feed</a> to it. Just copy paste the link and you should be good to go to get my updates through RSS.</p>
+            <p>So if you're old school like me or want to get into it, you need to first find a <a href="https://lifehacker.com/tech/best-rss-readers">reader</a> (I use <a href="https://www.freshrss.org/">freshRSS</a>) and add <a href="rss.xml">this feed</a> to it. Just copy paste the link and you should be good to go to get my updates through RSS.</p>
           
         </section>
     </main>
