--- a/sketches/index.html
+++ b/sketches/index.html
@@ -59,6 +59,7 @@
             <img src="07_Page_31.jpg" >
             <img src="07_Page_32.jpg" >
             <img src="07_Page_33.jpg" >
+            <img src="Page_35.jpg" >
             <img src="08_Page_34.jpg" >
             <img src="08_Page_35.jpg" >
             <img src="08_Page_36.jpg" >
