--- a/sketches/index.html
+++ b/sketches/index.html
@@ -95,7 +95,7 @@
     async src="//gc.zgo.at/count.js"></script>
 <footer>
     <footer>
-        <p>&copy; 2025 Grimpixels</p>
+        <p>&copy; 2025 Grimpixels.com</p>
     </footer>
 </body>
 </html>
