--- a/rss.html
+++ b/rss.html
@@ -9,17 +9,10 @@
 
 </head>
 <body>
-    <header>
-        <a href="index.html"> <img src="img/logo.png" alt="Logo" id="logo">
-                <h1>GRIMPIXELS</h1></a>
-        <nav>
-            <ul>
-                <li><a href="fff.html">Food, Fame & Fury</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="subscribe.html">Subscribe</a></li>
-            </ul>
-        </nav>
-    </header>
+ <!-- Header and script will be loaded here -->
+  
+    <div id=""header"></div>
+
     <main>
         <section class="content-section">
             <h2><a href="https://en.wikipedia.org/wiki/RSS">RSS</a>, is a classic way of subscribing to various feeds and websites. </h2>
@@ -33,10 +26,23 @@
           
         </section>
     </main>
-    <script data-goatcounter="https://ali3ngr2.goatcounter.com/count"
+      
+ <script data-goatcounter="https://ali3ngr2.goatcounter.com/count"
 async src="//gc.zgo.at/count.js"></script>
-    <footer>
-        <p>&copy; 2025 Grimpixels.</p>
-    </footer>
+
+ <!-- Footerand script will be loaded here -->
+<div id="footer"></div>
+<script>
+    function loadSection(id, file) {
+        fetch(file)
+            .then(response => response.text())
+            .then(data => document.getElementById(id).innerHTML = data)
+            .catch(error => console.error(`Error loading ${file}:`, error));
+    }
+
+    loadSection("header", "header.html");
+    loadSection("footer", "footer.html");
+</script>
+
 </body>
 </html>
