--- a/rss.html
+++ b/rss.html
@@ -10,8 +10,8 @@
 </head>
 <body>
  <!-- Header and script will be loaded here -->
-  
-    <div id=""header"></div>
+
+    <div id="header"></div>
 
     <main>
         <section class="content-section">
