--- a/fff.html
+++ b/fff.html
@@ -18,7 +18,7 @@
         <a href="chapter3.html"><img src="img/ch3.png" alt="Chapter 3"></a>
         <a href="chapter4.html"><img src="img/ch4.png" alt="Chapter 4"></a>
         <a href="chapter5.html"><img src="img/ch5.png" alt="Chapter 5"></a>
-
+        <a href="chapter6.html"><img src="img/ch6.png" alt="Chapter 6"></a>
     </section>
 </main>
 <script data-goatcounter="https://ali3ngr2.goatcounter.com/count"
