--- a/about.html
+++ b/about.html
@@ -13,10 +13,23 @@
     <main>
         <section class="content-section">
             <h2>About</h2>
-            <p>Grimpixels.com is a work in progress. For now, this is the place where I will be publishing my comic Food, Fame & Fury.</p><br>
+            <p>Grimpixels.com is a place for my side projects. Comics, illustrations, web projects, etc. For now, it's where I'll be publishing my comic Food, Fame & Fury.</p><br>
 
             <p>Food, Fame & Fury is a satirical dark comedy about a lonely food delivery man who spirals into obsession with a webcam model. Struggling to find help for his declining mental state, he turns to the internet, leading him down an even darker path.</p>
-          
+
+            <h2>Characters</h2>
+            <img src="img/tarvus.jpg">
+            <b>Tarvus</b>
+            <p>Tarvus (not travis) is an unstable, e-bike riding, junk-food-pushing socially awkward loner hungry for human connection.
+            </p><br>
+            <img src="img/breezy.jpg">
+            <b>Breezy</b>
+            <p>Breezy is a bubbly webcam model craving fame and validation, looking for love in all the wrong places.
+            </p><br>
+            <img src="img/vik.jpg">
+            <b>Vik</b>
+            <p>Vik is a charismatic, manipulative self-absorbed tech billionaire with political aspirations always cooking up schemes to fill the void within.
+            </p><br>
         </section>
     </main>
     <script data-goatcounter="https://ali3ngr2.goatcounter.com/count"
