--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
             <p>Food, Fame & Fury is a satirical dark comedy about a lonely food delivery man who spirals into obsession with a webcam model. Struggling to find help for his declining mental state, he turns to the internet, leading him down an even darker path.</p>
 
-            <h3>Characters</h3>
+            <p><h2>Characters</h2>
             <img src="img/tarvus.png" width="200px"><br>
             <b>Tarvus</b>
             <p>Tarvus (not travis) is an unstable, e-bike riding, junk-food-pushing socially awkward loner hungry for human connection.
@@ -29,7 +29,7 @@
             <img src="img/vik.png" width="200px"><br>
             <b>Vik</b>
             <p>Vik is a charismatic, manipulative self-absorbed tech billionaire with political aspirations always cooking up schemes to fill the void within.
-            </p><br>
+            </p></p><br>
         </section>
     </main>
     <script data-goatcounter="https://ali3ngr2.goatcounter.com/count"
