--- a/about.html
+++ b/about.html
@@ -26,10 +26,14 @@
             <b>Breezy</b>
             <p>Breezy is a bubbly webcam model craving fame and validation, looking for love in all the wrong places.
             </p><br>
-            <img src="img/vik.png" width="160px"><br>
-            <b>Vik</b>
-            <p>Vik is a charismatic, manipulative self-absorbed tech billionaire with political aspirations always cooking up schemes to fill the void within.
-            </p></p><br>
+            <div style="display: flex; align-items: center;">
+                <img src="img/vik.png" width="160px" style="margin-right: 20px;">
+                <div>
+                    <b>Vik</b>
+                    <p>Vik is a charismatic, manipulative self-absorbed tech billionaire with political aspirations always cooking up schemes to fill the void within.</p>
+                </div>
+            </div>
+            
         </section>
     </main>
     <script data-goatcounter="https://ali3ngr2.goatcounter.com/count"
