--- a/about.html
+++ b/about.html
@@ -19,13 +19,21 @@
 
             <p><h2>Characters</h2>
             <img src="img/tarvus.png" width="160px"><br>
-            <b>Tarvus</b>
-            <p>Tarvus (not travis) is an unstable, e-bike riding, junk-food-pushing socially awkward loner hungry for human connection.
-            </p><br>
-            <img src="img/breezy.png" width="160px"><br>
-            <b>Breezy</b>
-            <p>Breezy is a bubbly webcam model craving fame and validation, looking for love in all the wrong places.
-            </p><br>
+
+            <div style="display: flex; align-items: center;">
+                <img src="img/tarvus.png" width="160px" style="margin-right: 20px;">
+                <div>
+                    <b>Tarvus</b>
+                    <p>Tarvus (not travis) is an unstable, e-bike riding, junk-food-pushing socially awkward loner hungry for human connection.</p>
+                </div>
+
+            <div style="display: flex; align-items: center;">
+                <img src="img/breezy.png" width="160px" style="margin-right: 20px;">
+                <div>
+                    <b>Breezy</b>
+                    <p>Breezy is a bubbly webcam model craving fame and validation, looking for love in all the wrong places.</p>
+                </div>
+
             <div style="display: flex; align-items: center;">
                 <img src="img/vik.png" width="160px" style="margin-right: 20px;">
                 <div>
