--- a/about.html
+++ b/about.html
@@ -18,7 +18,6 @@
             <p>Food, Fame & Fury is a satirical dark comedy about a lonely food delivery man who spirals into obsession with a webcam model. Struggling to find help for his declining mental state, he turns to the internet, leading him down an even darker path.</p>
 
             <p><h2>Characters</h2>
-            <img src="img/tarvus.png" width="160px"><br>
 
             <div style="display: flex; align-items: center;">
                 <img src="img/tarvus.png" width="160px" style="margin-right: 20px;">
@@ -26,6 +25,7 @@
                     <b>Tarvus</b>
                     <p>Tarvus (not travis) is an unstable, e-bike riding, junk-food-pushing socially awkward loner hungry for human connection.</p>
                 </div>
+            </div>
 
             <div style="display: flex; align-items: center;">
                 <img src="img/breezy.png" width="160px" style="margin-right: 20px;">
@@ -33,6 +33,7 @@
                     <b>Breezy</b>
                     <p>Breezy is a bubbly webcam model craving fame and validation, looking for love in all the wrong places.</p>
                 </div>
+            </div>
 
             <div style="display: flex; align-items: center;">
                 <img src="img/vik.png" width="160px" style="margin-right: 20px;">
