--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
                     <b>Tarvus</b>
                     <p>Tarvus (not travis) is an unstable, e-bike riding, junk-food-pushing socially awkward loner hungry for human connection.</p>
                 </div>
-            </div>
+            </div><br>
 
             <div style="display: flex; align-items: center;">
                 <img src="img/breezy.png" width="160px" style="margin-right: 20px;">
@@ -33,7 +33,7 @@
                     <b>Breezy</b>
                     <p>Breezy is a bubbly webcam model craving fame and validation, looking for love in all the wrong places.</p>
                 </div>
-            </div>
+            </div><br>
 
             <div style="display: flex; align-items: center;">
                 <img src="img/vik.png" width="160px" style="margin-right: 20px;">
